# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")
pulseaudio_dir = "//third_party/pulseaudio"
config("audio_utils_public_config") {
  include_dirs = [ "./include" ]
}

ohos_shared_library("audio_utils") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }
  public_configs = [ ":audio_utils_public_config" ]
  install_enable = true
  include_dirs = [
    "./include",
    "../../../interfaces/inner_api/native/audiocommon/include/",
    "../../..//services/audio_service/client/include",
  ]

  sources = [
    "./src/audio_channel_blend.cpp",
    "./src/audio_speed.cpp",
    "./src/audio_utils.cpp",
    "./src/volume_ramp.cpp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]

  if (sonic_enable == true) {
    include_dirs += [ "$pulseaudio_dir/sonic" ]
    deps = [ "$pulseaudio_dir/sonic:sonic" ]
  }

  defines = []
  if (audio_framework_feature_hitrace_enable) {
    defines += [ "FEATURE_HITRACE_METER" ]
    external_deps += [ "hitrace:hitrace_meter" ]
  }

  subsystem_name = "multimedia"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "audio_framework"
}
