# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//foundation/multimedia/audio_framework/config.gni")

ohos_shared_library("audio_bluetooth_client") {
  install_enable = true
  sources = [
    "audio_bluetooth_manager.cpp",
    "bluetooth_a2dp_audio_src_observer_stub.cpp",
    "bluetooth_a2dp_src_observer.cpp",
  ]

  include_dirs = [
    "//foundation/communication/bluetooth/frameworks/inner/common",
    "//foundation/communication/bluetooth/interfaces/inner_api/include",
    "//foundation/communication/bluetooth/interfaces/inner_api/include/c_header",
    "//foundation/communication/bluetooth/services/bluetooth/common/",
    "//foundation/communication/bluetooth/services/bluetooth/ipc/include",
    "//foundation/multimedia/audio_framework/services/audio_policy/server/include/service/interface",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//drivers/peripheral/bluetooth/audio/interfaces/include",
    "//drivers/peripheral/bluetooth/audio/hal/hdi_binder/proxy/include",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/communication/bluetooth/frameworks/inner:btframework",
    "//foundation/communication/bluetooth/services/bluetooth/ipc:btipc_static",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/sink:bluetooth_renderer_sink",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "multimedia_audio_framework"
  subsystem_name = "multimedia"
}
