# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//foundation/multimedia/audio_framework/config.gni")

ohos_shared_library("audio_bluetooth_client") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//foundation/multimedia/audio_framework/cfi_blocklist.txt"
  }
  install_enable = true
  sources = [ "audio_bluetooth_manager.cpp" ]

  include_dirs = [
    "//foundation/multimedia/audio_framework/services/audio_policy/server/include/service/interface",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
  ]

  external_deps = [
    "bluetooth:btframework",
    "hiviewdfx_hilog_native:libhilog",
  ]

  part_name = "multimedia_audio_framework"
  subsystem_name = "multimedia"
}
