# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

pulseaudio_dir = "//third_party/pulseaudio"
opensles_dir = "//third_party/openSLES"
opensles_version = "1.0.1"

config("audio_config") {
  include_dirs = [
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer/include",
    "//foundation/multimedia/audio_framework/frameworks/native/audiorenderer/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    "//foundation/multimedia/audio_framework/frameworks/native/audiocapturer/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiostream/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiosession/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
    "//foundation/multimedia/audio_framework/services/include",
    "//foundation/multimedia/audio_framework/services/include/audio_service/client",
    "//foundation/multimedia/audio_framework/services/test",
    "//utils/native/base/include",
    "$pulseaudio_dir/src",
    "$pulseaudio_dir/confgure/src",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}

ohos_shared_library("opensles") {
  include_dirs = [
    "$opensles_dir/api/$opensles_version",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/andiorenderer/include/",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/andiocapturer/include/",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/andiomanager/include/",
  ]

  configs = [ ":audio_config" ]

  sources = [
    "$opensles_dir/api/$opensles_version/OpenSLES_IID.c",
    "$opensles_dir/api/$opensles_version/OpenSLES_OpenHarmony_IID.c",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/adapter/audiocapturer_adapter.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/adapter/audioplayer_adapter.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/adapter/readorwritecallback_adapter.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/engine_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/object_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/openharmony_buffer_queue_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/play_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/record_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/itf/volume_itf.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/obj/audiocapturer_obj.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/obj/audioplayer_obj.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/obj/engine_obj.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/obj/output_mix_obj.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/util/builder.cpp",
    "//foundation/multimedia/audio_framework/frameworks/native/opensles/src/util/table_struct.cpp",
  ]

  cflags = [ "-Werror" ]

  deps = [
    "//foundation/multimedia/audio_framework:libsl",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer:audio_capturer",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager:audio_client",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer:audio_renderer",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  output_name = "OpenSLES"
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "multimedia_audio_framework"
}
